<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/imgLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/tvTitleProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_logout_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/logout"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTitleProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_extrabold"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLogout" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="4dp"
                android:src="@color/teal_200"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleProfile" />

            <TextView
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/abhaya_libre_extrabold"
                android:text="@string/name_view"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

            <ImageView
                android:id="@+id/imageIconName"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/baseline_person_24"
                app:layout_constraintEnd_toStartOf="@id/nameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameView" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/outlined_background"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|start"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:fontFamily="@font/abhaya_libre"
                app:layout_constraintBottom_toBottomOf="@+id/imageIconName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageIconName"
                app:layout_constraintTop_toTopOf="@+id/imageIconName"
                tools:text="@string/dummy_name"/>

            <TextView
                android:id="@+id/emailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24sp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/abhaya_libre_extrabold"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageIconName" />

            <ImageView
                android:id="@+id/imageIconEmail"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_baseline_email_24"
                app:layout_constraintEnd_toStartOf="@id/emailTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailView" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="24dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|start"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:fontFamily="@font/abhaya_libre"
                android:background="@drawable/outlined_background"
                app:layout_constraintBottom_toBottomOf="@+id/imageIconEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageIconEmail"
                app:layout_constraintTop_toTopOf="@+id/imageIconEmail" />

            <TextView
                android:id="@+id/genderView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/abhaya_libre_extrabold"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageIconEmail" />

            <ImageView
                android:id="@+id/imageIconGender"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_gender_black_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderView" />

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="24dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|start"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:fontFamily="@font/abhaya_libre"
                android:background="@drawable/outlined_background"
                app:layout_constraintBottom_toBottomOf="@+id/imageIconGender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageIconGender"
                app:layout_constraintTop_toTopOf="@+id/imageIconGender" />

            <TextView
                android:id="@+id/birthView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/abhaya_libre_extrabold"
                android:text="@string/birth"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageIconGender" />

            <ImageView
                android:id="@+id/imageIconBirth"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_calendar_black_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthView" />

            <TextView
                android:id="@+id/birthTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/outlined_background"
                app:layout_constraintBottom_toBottomOf="@+id/imageIconBirth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageIconBirth"
                app:layout_constraintTop_toTopOf="@+id/imageIconBirth" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/abhaya_libre_extrabold"
                android:text="@string/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kulim_park"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>